tests/bad/while_not_bool.ae
/// fail: Condition must be boolean

def main() {
    while (0) {
    }
}